src/objects/Reach_Questionnaire__c.object
<CustomObject>
    <fields>
        <fullName>Bargaining_Assessment__c</fullName>
        <label>Bargaining Assessment</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bargaining_Budget_and_Job_Security__c</fullName>
        <description>Question 12 from Stanford GetFeedback form.</description>
        <label>Bargaining Budget and Job Security</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bargaining_Current_Health_Benefits__c</fullName>
        <description>Question 15 from Stanford GetFeedback survey.</description>
        <label>Bargaining Current Health Benefits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bargaining_Fair_Disclipline__c</fullName>
        <description>Question 10 from GetFeedback form.</description>
        <label>Bargaining Fair Disclipline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bargaining_Help_Win_Contract__c</fullName>
        <description>Question 18 from Stanford GetFeedback survey.</description>
        <label>Bargaining Help Win Contract</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bargaining_Important_Issues__c</fullName>
        <label>Bargaining Important Issues</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bargaining_Is_Leader__c</fullName>
        <label>Bargaining Is Leader</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bargaining_Leader_Type__c</fullName>
        <label>Bargaining Leader Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bargaining_Nom_Comments__c</fullName>
        <label>Bargaining Nom Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bargaining_Nom_Department__c</fullName>
        <label>Bargaining Nom Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bargaining_Nom_Job__c</fullName>
        <label>Bargaining Nom Job</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bargaining_Nom_Name__c</fullName>
        <description>Screen 19 of Stanford GetFeedback survey.</description>
        <label>Bargaining Nom Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bargaining_Nom_Shift__c</fullName>
        <label>Bargaining Nom Shift</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bargaining_Patient_Care_Comments__c</fullName>
        <label>Bargaining Patient Care Comments</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bargaining_Patient_Care__c</fullName>
        <description>Question 6 from Stanford GetFeedback form.</description>
        <label>Bargaining Patient Care</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bargaining_Patients_at_Risk__c</fullName>
        <description>Question 7 from Stanford GetFeedback form.</description>
        <label>Bargaining Patients at Risk</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bargaining_Pay_Comp_Other_Hosps__c</fullName>
        <label>Bargaining Pay Comp Other Hosps</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bargaining_Pay_Competitive__c</fullName>
        <description>Question 13 from Stanford GetFeedback survey.</description>
        <label>Bargaining Pay Competitive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bargaining_Priority_1__c</fullName>
        <label>Bargaining Priority 1</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bargaining_Priority_2__c</fullName>
        <label>Bargaining Priority 2</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bargaining_Priority_3__c</fullName>
        <label>Bargaining Priority 3</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bargaining_Respect_Seniority__c</fullName>
        <description>Question 9 from Stanford GetFeedback Survey.</description>
        <label>Bargaining Respect Seniority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bargaining_Retirement_Matching__c</fullName>
        <description>Question 14 from Stanford GetFeedback survey.</description>
        <label>Bargaining Retirement Matching</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bargaining_Staffing_Comments__c</fullName>
        <label>Bargaining Staffing Comments</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bargaining_Staffing__c</fullName>
        <description>question 4 on Stanford GetFeedback form</description>
        <label>Bargaining Staffing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bargaining_Steward_Release__c</fullName>
        <description>Question 8 from Stanford GetFeedback form.</description>
        <label>Bargaining Steward Release</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bargaining_Union_Info_Preference__c</fullName>
        <description>Question 11 from Stanford GetFeedback survey.</description>
        <label>Bargaining Union Info Preference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bargaining_Work_Satisfaction__c</fullName>
        <label>Bargaining Work Satisfaction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bargaining_Workload__c</fullName>
        <description>question 5 from Stanford GetFeedback form.</description>
        <label>Bargaining Workload</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <label>Building</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COPE_Contribution__c</fullName>
        <description>use in Consolidation Survey 2017</description>
        <inlineHelpText>use in Consolidation Survey 2017</inlineHelpText>
        <label>COPE Contribution</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Time__c</fullName>
        <label>Completion Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_Information_Correct__c</fullName>
        <description>Use in Consolidation Survey; If answer is NO, cell and email are provided.</description>
        <inlineHelpText>Use in Consolidation Survey; If answer is NO, cell and email are provided.</inlineHelpText>
        <label>Contact Information Correct</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coordinator_Name__c</fullName>
        <formula>Leader_Employer__r.Coordinator__r.FirstName &amp; &quot; &quot; &amp; 
 Leader_Employer__r.Coordinator__r.LastName</formula>
        <label>Coordinator Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>text(Leader_Employer__r.Account_Group__c)</formula>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <formula>Leader_Employer__r.Name</formula>
        <label>Employer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethnic_Group__c</fullName>
        <label>Ethnic Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <label>Floor</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Code__c</fullName>
        <label>Language Code</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EN</fullName>
                    <default>true</default>
                    <label>EN</label>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leader_Employer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Leader Employer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reach Questionnaires</relationshipLabel>
        <relationshipName>Reach_Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Leader_Name__c</fullName>
        <label>Leader Name</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manually_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was this reach questionnaire manually created rather than going through GetFeedback?</description>
        <label>Manually Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Alt_Phone__c</fullName>
        <label>Member Alt Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Member_Cell_Phone__c</fullName>
        <label>Member Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Member_Department__c</fullName>
        <label>Member Department</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Email__c</fullName>
        <label>Member Email</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Employee_Id__c</fullName>
        <label>Member Employee Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Facility__c</fullName>
        <label>Member Facility</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Home_Zip_Code__c</fullName>
        <label>Member Home Zip Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <description>use in Consolidation Survey 2017</description>
        <label>Member ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Job__c</fullName>
        <label>Member Job</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Name__c</fullName>
        <label>Member Name</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Shift__c</fullName>
        <label>Member Shift</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nomination_1_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nomination 1 Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reach Questionnaires</relationshipLabel>
        <relationshipName>Reach_Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nomination_1_Name__c</fullName>
        <label>Nomination 1 Name</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizer_Name__c</fullName>
        <formula>Leader_Employer__r.Organizer_1__r.FirstName &amp; &quot; &quot; &amp;  Leader_Employer__r.Organizer_1__r.LastName</formula>
        <label>Organizer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Election_Results__c</fullName>
        <description>How do you think the November election results will affect you?</description>
        <label>Question Election Results</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Negatively</fullName>
                </value>
                <value>
                    <fullName>Positively</fullName>
                </value>
                <value>
                    <fullName>Won&apos;t affect me</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_Healthcare_Cuts__c</fullName>
        <label>Question Healthcare Cuts</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_Losing_Union__c</fullName>
        <description>How will losing your union affect you?</description>
        <label>Question Losing Union</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_Path_Forward__c</fullName>
        <label>Question Path Forward</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly agree</fullName>
                </value>
                <value>
                    <fullName>Somewhat agree</fullName>
                </value>
                <value>
                    <fullName>Somewhat disagree</fullName>
                </value>
                <value>
                    <fullName>Strongly disagree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Questionnaire_Duration__c</fullName>
        <formula>Completion_Time__c -  Start_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Questionnaire Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Questionnaire_Status__c</fullName>
        <formula>if (isblank( Survey_Response__c), 
    if (Duplicate__c = true, &quot;Duplicate&quot;, 
    if ( Unable_to_Resolve__c = true, &quot;Unable to Resolve&quot;, &quot;Not Evaluated&quot;)
      ),
    if (isblank(Survey_Response__r.Contact__c), &quot;Non-Member&quot;, &quot;Member&quot;)
)</formula>
        <label>Questionnaire Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recon_Page__c</fullName>
        <formula>if (isblank(Survey_Response__c),
HYPERLINK(&quot;apex/Resolve_Consolidation_SRs?rcid=&quot; &amp; CASESAFEID(Id) , &quot;Recon Page&quot;),
&quot;Already Reconciled&quot;)</formula>
        <label>Recon Page</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reg_Director_Name__c</fullName>
        <formula>Leader_Employer__r.Regional_Director__r.FirstName &amp; &quot; &quot; &amp; Leader_Employer__r.Regional_Director__r.LastName</formula>
        <label>Reg Director Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT(Leader_Employer__r.Region__c)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolve_Comments_Extended__c</fullName>
        <label>Resolve Comments Extended</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolve_Comments__c</fullName>
        <label>Resolve Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>Sex</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signed_Membership_Card__c</fullName>
        <description>use in Consolidation Survey 2017</description>
        <label>Signed Membership Card</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Text__c</fullName>
        <label>Source Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stretch_Status__c</fullName>
        <formula>if ( Questionnaire_Status__c = &quot;Member&quot;,
     if (contains(upper(Survey_Response__r.Report_Group__c), &quot;REACH&quot;), 
         &quot;Already Reached&quot;,
         if (isblank(Survey_Response__r.Contact__r.Tier_Staff__c), 
             &quot;Not in ID-ed Dept&quot;,
              if (Survey_Response__r.Contact__r.In_Current_BU__c = true, 
                  &quot;Stretch Credited&quot;,
                  &quot;Not in Current BU&quot;
              )
         )
     ),
if (FIND(&quot;duplicat&quot;,  LOWER(Resolve_Comments__c)) &gt; 0, &quot;Duplicate&quot;, Questionnaire_Status__c)
)</formula>
        <label>Stretch Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Response__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Response</label>
        <referenceTo>Survey_Response__c</referenceTo>
        <relationshipLabel>Reach Questionnaires</relationshipLabel>
        <relationshipName>Reach_Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unable_to_Resolve__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unable to Resolve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Years_of_Service__c</fullName>
        <label>Years of Service</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Reach Questionnaire</label>
    <nameField>
        <displayFormat>RCH-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reach Questionnaires</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>